--- a/playbooks/ios.yml
+++ b/playbooks/ios.yml
@@ -5,7 +5,12 @@
       - archive
     lines:
       - "path flash:"
+- name: register the ssh key for scp
+  copy:
+    contents: "{{ ansible_username }}"
+    dest: "{{ playbook_dir }}/ssh_key"
+  delegate_to: localhost
+  run_once: yes
+
 - name: Push device configs
-  command: "scp /archived_configs/{{ inventory_hostname }}/config/running.cfg {{ inventory_hostname }}:/running.config"
-  become: yes
-  become_user: ec2-user
+  command: "scp -i {{ playbook_dir }}/ssh_key /archived_configs/{{ inventory_hostname }}/config/running.cfg ec2-user@{{ inventory_hostname }}:/running.config"
