--- a/playbooks/ios.yml
+++ b/playbooks/ios.yml
@@ -5,12 +5,15 @@
       - archive
     lines:
       - "path flash:"
-- name: register the ssh key for scp
-  copy:
-    contents: "{{ ansible_password }}"
-    dest: "{{ playbook_dir }}/ssh_key"
-  delegate_to: localhost
-  run_once: yes
+
+# - name: register the ssh key for scp
+#   copy:
+#     contents: "{{ ansible_password }}"
+#     dest: "{{ playbook_dir }}/ssh_key"
+#   delegate_to: localhost
+#   run_once: yes
+
+- debug: var=hostvars.inventory_hostname
 
 - name: Push device configs
-  command: "scp -i {{ playbook_dir }}/ssh_key /archived_configs/{{ inventory_hostname }}/config/running.cfg ec2-user@{{ inventory_hostname }}:/running.config"
+  command: "scp -i ansible_ssh_private_key_file /archived_configs/{{ inventory_hostname }}/config/running.cfg ec2-user@{{ inventory_hostname }}:/running.config"
