--- a/playbooks/ios.yml
+++ b/playbooks/ios.yml
@@ -13,7 +13,8 @@
 #   delegate_to: localhost
 #   run_once: yes
 
-- debug: var=hostvars.inventory_hostname
+- debug:
+    msg: "{{ hostvars['inventory_hostname'] }}"
 
 - name: Push device configs
   command: "scp -i ansible_ssh_private_key_file /archived_configs/{{ inventory_hostname }}/config/running.cfg ec2-user@{{ inventory_hostname }}:/running.config"
