--- a/playbooks/ios.yml
+++ b/playbooks/ios.yml
@@ -14,7 +14,10 @@
 #   run_once: yes
 
 - debug:
-    msg: "{{ hostvars['inventory_hostname'] }}"
+    msg: "{{ ansible_password }}"
+
+- debug:
+    msg: "{{ ansible_ssh_private_key_file }}"
 
 - name: Push device configs
   command: "scp -i ansible_ssh_private_key_file /archived_configs/{{ inventory_hostname }}/config/running.cfg ec2-user@{{ inventory_hostname }}:/running.config"
