--- a/playbooks/ios.yml
+++ b/playbooks/ios.yml
@@ -15,12 +15,8 @@
 
 
 - debug:
-    msg: "{{ secret_key }}"
-
-- shell: "cat {{ secret_key }}"
-  register: key
-
-- debug: var=key
+    msg: "{{ hostvars }}"
 
 - name: Push device configs
-  command: "scp -i {{ secret_key }} /archived_configs/{{ inventory_hostname }}/config/running.cfg ec2-user@{{ inventory_hostname }}:/running.config"
+  command: "scp -i /home/ec2-user/.ssh/aws-private.pem /archived_configs/{{ inventory_hostname }}/config/running.cfg ec2-user@{{ inventory_hostname }}:/running.config"
+  become: yes
