--- a/playbooks/ios.yml
+++ b/playbooks/ios.yml
@@ -14,9 +14,6 @@
 #   run_once: yes
 
 
-- debug:
-    msg: "{{ hostvars }}"
-
 - name: Push device configs
-  command: "scp -i /home/ec2-user/.ssh/aws-private.pem /archived_configs/{{ inventory_hostname }}/config/running.cfg ec2-user@{{ inventory_hostname }}:/running.config"
+  command: "scp -i /home/ec2-user/.ssh/aws-private.pem -o StrictHostKeyChecking=no  /archived_configs/{{ inventory_hostname }}/config/running.cfg ec2-user@{{ inventory_hostname }}:/running.config"
   become: yes
