--- a/playbooks/ios.yml
+++ b/playbooks/ios.yml
@@ -17,3 +17,8 @@
 - name: Push device configs
   command: "scp -i /home/ec2-user/.ssh/aws-private.pem -o StrictHostKeyChecking=no  /archived_configs/{{ inventory_hostname }}/config/running.cfg ec2-user@{{ inventory_hostname }}:/running.config"
   become: yes
+
+- name: Replace config
+  ios_command:
+    commands:
+      - configure replace flash:running.config
