--- a/playbooks/ios.yml
+++ b/playbooks/ios.yml
@@ -21,5 +21,6 @@
 - name: Replace config
   ios_command:
     commands:
+      - show clock
       - "dir flash:"
       - configure replace flash:running.config force
