--- a/playbooks/ios.yml
+++ b/playbooks/ios.yml
@@ -21,4 +21,5 @@
 - name: Replace config
   ios_command:
     commands:
-      - "config replace flash:running.config force"
+      - show privilege
+      #- "config replace flash:running.config force"
