--- a/playbooks/ios.yml
+++ b/playbooks/ios.yml
@@ -23,4 +23,10 @@
     commands:
       - show privilege
       - show user
+
+- name: Replace config
+  ios_command:
+    commands:
+      - show privilege
+      - show user
       - config replace flash:running.config force
