--- a/playbooks/ios.yml
+++ b/playbooks/ios.yml
@@ -28,5 +28,4 @@
   ios_command:
     commands:
       - config replace flash:running.config force
-  become: yes
-  become_method: enable
+  remote_user: ec2-user
