strange privilege behavior test

--- a/playbooks/ios.yml
+++ b/playbooks/ios.yml
@@ -13,6 +13,12 @@
 #   delegate_to: localhost
 #   run_once: yes
 
+- name: Replace config
+  ios_command:
+    commands:
+      - show privilege
+      - show user
+
 
 - name: Push device configs
   command: "scp -i /home/ec2-user/.ssh/aws-private.pem -o StrictHostKeyChecking=no  /archived_configs/{{ inventory_hostname }}/config/running.cfg ec2-user@{{ inventory_hostname }}:/running.config"
@@ -23,11 +29,8 @@
     commands:
       - show privilege
       - show user
-- debug:
-    msg: "{{ hostvars[inventory_hostname] }}"
 
 - name: Replace config
   ios_command:
     commands:
       - config replace flash:running.config force
-  remote_user: ec2-user
